cabal-version:      2.4
name:               filtag
version:            0.1.0.0
synopsis:           file tagging cli

-- A longer description of the package.
-- description:
homepage:           https://github.com/chezbgone/filtag

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Jason Chen
maintainer:         chezbgone@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable filtag
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , directory
    hs-source-dirs:   src
    default-language: Haskell2010
